--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@ body {
 }
 
 .info-snackbar {
+  position: relative;
   --mdc-snackbar-container-color: var(--info);
   text-align: center;
 }
@@ -41,6 +42,10 @@ body {
 }
 .snackbar-icon {
   position: absolute;
+  top: -15;
   padding: 5px;
   color: white;
+}
+button {
+  margin: 5px;
 }
